k8s/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-app-ingress
  namespace: default
  labels:
    app: jenkins-app
    pipeline: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /jenkins(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: jenkins-app-service
            port:
              number: 80
